--- a/views/less.ejs
+++ b/views/less.ejs
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <h3>Less then $30 pounds</h3>
+    <div><%- include('partials/header'); %>.</div>
+
+    <h3>Less then $30</h3>
+    <div><%- include('partials/gallery'); %>.</div>
   </body>
 </html>
