--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
 <div>
     <ul>
        
-        <li><a href="/">All</a></li>
+        <li><a href="/">Weekly Recommendations</a></li>
         <li><a href="/add">Add</a></li>
         <li><a href="/less">30$ Dollar or less!</a></li>
 
